--- a/src/screen/registration/registrationReview/registrationReview.css
+++ b/src/screen/registration/registrationReview/registrationReview.css
@@ -12,11 +12,127 @@
     box-shadow: 0px -6px 1px #000; */
 }
 
-.review-business-detail-title-box{
+.review-business-detail-title-box {
+    font-weight: 700;
+    font-size: 20px;
+}
+
+.review-business-detail-title-value {
+    font-size: 14px;
     font-weight: 600;
 }
 
-.review-business-detail-title-value{
-    font-size: 12px;
-    font-weight: 600;
+.review-business-detail-title-container {
+    margin-bottom: 14px;
+}
+
+.review-business-detail-sub-section {
+    border-bottom: 2px dotted #000;
+}
+
+.review-bank-account-detail-sub-section {
+    border-bottom: 2px dotted #000;
+}
+
+
+.review-business-doc-value {
+    background: #D8DBDF;
+    padding: 7px 13px;
+    border-radius: 6px;
+}
+
+.review-business-doc-value p {
+    font-weight: 500;
+}
+
+.review-business-document-detail-sub-section {
+    border-bottom: 2px dotted #000;
+}
+
+.review-address-details-sub-section {
+    border-bottom: 2px dotted #000;
+}
+
+.review-location-container {
+    position: absolute;
+    right: 350px;
+    bottom: 85px;
+    padding: 20px;
+    background: #B6BAC3;
+    border: apx solid #1F8505;
+}
+
+.review-brand-detail-title-value {
+    font-weight: 500;
+}
+
+
+.back-btn {
+    outline: none;
+    border: none;
+    padding: 6px 50px;
+    background-color: #7e7e7e;
+    color: #000000;
+    font-weight: 500;
+    border-radius: 5px;
+}
+
+.save-btn {
+    outline: none;
+    border: none;
+    padding: 6px 50px;
+    background-color: #1F8505;
+    color: #fff;
+    font-weight: 500;
+    border-radius: 5px;
+}
+
+@media (max-width: 992px) {
+    .review-business-detail-title-box {
+        font-size: 15px;
+    }
+
+    .review-business-detail-title-value {
+        font-size: 12px;
+    }
+}
+
+@media (max-width: 1024px) {
+    .review-location-container {
+        right: 0px;
+    }
+}
+
+@media (max-width: 768px) {
+    .review-brand-detail-title-value {
+        font-size: 13px;
+    }
+
+    .back-btn {
+        padding: 5px 25px;
+    }
+
+    .save-btn {
+        padding: 5px 25px;
+    }
+}
+
+@media (max-width: 425px) {
+    .review-location-container {
+        bottom: 10px;
+    }
+}
+
+@media (max-width: 375px) {
+    .back-btn {
+        padding: 5px 18px;
+    }
+
+    .save-btn {
+        padding: 5px 18px;
+    }
+
+    .next-btn {
+        padding: 5px 18px;
+    }
 }
