integrate login otp request api & verify api

--- a/src/screen/auth/LoginOtpVerification.css
+++ b/src/screen/auth/LoginOtpVerification.css
@@ -116,6 +116,7 @@
     border-radius: 7px;
     border: 2px solid #d1f1c9;
     background: #F4FFF1;
+    text-align: center;
 }
 
 
@@ -172,6 +173,7 @@
     #back-btn {
         padding: 5px 0;
     }
+
     .otp-input {
         width: 16%;
     }
