--- a/src/screen/app/inventoryAndPricing/inventoryPricing.css
+++ b/src/screen/app/inventoryAndPricing/inventoryPricing.css
@@ -75,6 +75,34 @@
     background: #1F8505;
 }
 
+.bulk-uploud-item-name {
+    color: rgba(64, 68, 76, 1);
+    cursor: pointer;
+    margin-bottom: 10px;
+    display: flex;
+    align-items: center;
+    font-weight: 600;
+}
+.bulk-up-file-name{
+    background: rgba(182, 186, 195, 1);
+    padding: 7px 16px;
+    border-radius: 5px;
+    color: rgba(64, 68, 76, 1);
+}
+.bulk-uploud-download-btn{
+    padding: 8px 12px;
+    background-color: rgba(31, 133, 5, 1);
+    color: white;
+    text-decoration: none;
+    border-radius: 5px;
+}
+.bulk-uploud-upload-btn{
+    padding: 8px 12px;
+    background-color: rgba(64, 68, 76, 1);
+    color: #ffffff;
+    border-radius: 5px;
+    cursor: pointer;
+}
 @media screen and (max-width: 768px) {
     .update-portal-search-box input {
         width: 49%;
