add changes to the update or portal table

--- a/src/AppStack.css
+++ b/src/AppStack.css
@@ -148,6 +148,12 @@
     border-color: #fff;
 }
 
+.side-item-disable{
+    opacity: 0.5;
+    pointer-events: none; /* Prevent clicks */
+}
+
+
 @keyframes sidebarAnimation {
     0% {
         opacity: 0;
