--- a/src/screen/app/inventoryAndPricing/inventoryPricing.css
+++ b/src/screen/app/inventoryAndPricing/inventoryPricing.css
@@ -5,9 +5,10 @@
 
 .update-portal-box select {
     border: 1px solid #1F8505;
-    padding: 4px 7px;
+    padding: 7px 4px;
     font-size: 14px;
     border-radius: 4px;
+    width: 100%;
 }
 
 .or-text-update-portal {
@@ -108,6 +109,20 @@
     border-radius: 5px;
     cursor: pointer;
     font-size: 13px;
+}
+
+#search-suggest-box {
+    z-index: 1000;
+    position: absolute;
+    top: 101%;
+    /* box-shadow: 0px 0px 50px #000; */
+    border-radius: 10px;
+    height: 300px;
+    overflow-y: auto;
+}
+
+#search-suggest-box .list-group {
+    height: 100%;
 }
 
 @media screen and (max-width: 768px) {
