--- a/src/AppStack.css
+++ b/src/AppStack.css
@@ -311,13 +311,13 @@
     border-radius: 50%;
 }
 
-#dropdown-menu-show-ani-one {
+/* #dropdown-menu-show-ani-one {
     animation: headerBoxAnimationOne 0.5s ease-out forwards;
 }
 
 #dropdown-menu-show-ani-two {
     animation: headerBoxAnimationTwo 0.5s ease-out forwards;
-}
+} */
 
 .search-filter-header-bar {
     flex-wrap: wrap;
@@ -737,7 +737,7 @@ span {
     border-radius: 8px;
     width: 80%;
     max-width: 600px;
-    max-height: 80vh;
+    max-height: 90vh;
     display: flex;
     flex-direction: column;
     max-width: 800px;
@@ -768,12 +768,9 @@ span {
 }
 
 .modal-image {
-    /* max-width: 100%;
-    max-height: 60vh; */
-    object-fit: contain;
-    height: 100%;
-    width: 100%;
-    margin-top: 115%;
+    height: 80%;
+    width: 80%;
+    margin-top: 1%;
 }
 
 .close-button {
@@ -801,4 +798,24 @@ span {
     width: 5px;
     background: #1F8505;
     border-radius: 10px;
+}
+
+
+
+
+
+
+
+
+/* Active cell styling */
+.active-edit-cell {
+    background-color: rgba(120, 188, 102, 0.1) !important;
+    border: 1px solid rgb(120, 188, 102) !important;
+    transition: all 0.2s ease;
+}
+
+/* AG Grid edit mode styling */
+.ag-theme-alpine .ag-cell-inline-editing {
+    border: 1px solid rgb(120, 188, 102) !important;
+    box-shadow: 0 0 0 1px rgb(120, 188, 102);
 }
