remove paisa coversion changes and add brands page skip button and adjust width of the cells in products and update here on portal page (dashboard)

--- a/src/screen/registration/brandsDetails/brandsDetails.css
+++ b/src/screen/registration/brandsDetails/brandsDetails.css
@@ -28,8 +28,14 @@
 
 .brand-details-skip {
     position: absolute;
-    color: #1F8505;
+    color: red;
     right: 40px;
+    cursor: pointer;
+    transition: 0.4s;
+}
+
+.brand-details-skip:hover {
+    text-decoration: underline;
 }
 
 .brand-custom-select {
