--- a/src/screen/app/orders/orders.css
+++ b/src/screen/app/orders/orders.css
@@ -25,7 +25,7 @@
     font-size: 14px;
 }
 
-.order-status-box span {
+.order-status-indecator {
     position: absolute;
     width: 14px;
     height: 14px;
@@ -34,7 +34,6 @@
     top: 7%;
     right: 3%;
 }
-
 
 
 
@@ -67,7 +66,6 @@
 .text-muted {
     color: #6c757d !important;
 }
-
 
 
 
