add sellerid to shipment update api payload and also fix some ui and ui conditional base bug or changes

--- a/src/screen/app/orderDetails/orderDetails.css
+++ b/src/screen/app/orderDetails/orderDetails.css
@@ -16,3 +16,12 @@
     background-color: #8b8b8b;
     cursor: not-allowed;
 }
+.mrg-in{
+    margin-right: 5rem;
+}
+
+@media (max-width:560px) {
+    .mrg-in{
+        margin-right: 10px;
+    }
+}
