--- a/src/screen/app/orders/orders.css
+++ b/src/screen/app/orders/orders.css
@@ -74,7 +74,8 @@
     color: #fff;
 
 }
-.order-details-container{
+
+.order-details-container {
     display: flex;
     flex-wrap: wrap;
     gap: 5px;
@@ -91,5 +92,10 @@
 @media (max-width:425px) {
     .order-status-box p {
         font-size: 11px;
+    }
+
+    .order-status-box {
+        width: 24%;
+        padding: 6px 4px;
     }
 }
