--- a/src/screen/app/home/home.css
+++ b/src/screen/app/home/home.css
@@ -1,5 +1,4 @@
 .order-status-box-one {
-    background: #1F8505;
     display: flex;
     flex-wrap: wrap;
     width: 20%;
@@ -10,15 +9,29 @@
     height: auto;
     padding: 18px 5px;
     cursor: pointer;
+    /* border: 1.6px solid #1F8505; */
+    box-shadow: 0px 0px 9px #1F8505;
+    color: #1F8505;
+    transition: 0.2s linear;
 }
 
+.order-status-box-one:hover {
+    background: #1F8505;
 
+}
+.order-status-box-one:hover .order-status-box-one-text{
+    color: #fff;
+}
+.order-status-box-one:hover .home-count{
+    color: #fff;
+}
 
 .home-count {
     font-size: 20px;
     position: absolute;
     bottom: 1%;
     right: 4%;
+    color: #c60d0d;
 }
 
 .pay-over-table-filter-select-btn {
@@ -26,7 +39,7 @@
     color: #fff;
     outline: none;
     border: none;
-    padding: 6px 15px;
+    padding: 5.3px 15px;
     font-weight: 500;
     border-radius: 4px;
 }
@@ -63,15 +76,20 @@
 }
 
 .first-sec {
-    border-bottom: 2px solid #000;
+    border-bottom: 2px solid #747373;
 }
 
 .payment-overview-container {
-    border-right: 2px solid #000;
+    border-right: 2px solid #747373;
 }
 
 .loction-header {
     margin-top: 0.5rem;
+}
+
+.order-status-box-one-text {
+    color: #1F8505;
+    font-size: 14px;
 }
 
 @media (max-width:768px) {
